# arxiv_to_bibtex

./: README.md  pyproject.toml
html_version/: single_page.html
src/: __init__.py  __main__.py  arxiv.py  arxiv_to_bibtex.py  bibtex_record.py
src/arxiv_to_bibtex/: __main__.py  arxiv.py  cli.py
