[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "arxiv_to_bibtex"
version = "0.1"
dependencies = [
  "requests",
  "beautifulsoup4",
]
requires-python = ">= 3.7"
authors = [
  {name = "David Lowry-Duda", email="david@lowryduda.com"},
]
maintainers = [
  {name = "David Lowry-Duda", email="david@lowryduda.com"},
]
description = "A simple tool to get bibtex from arxiv ids."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["arxiv", "bibtex", "latex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
]


[project.urls]
Repository = "https://github.com/davidlowryduda/arxiv_to_bibtex"
Issues = "https://github.com/davidlowryduda/arxiv_to_bibtex/issues"


[project.scripts]
arxiv_to_bibtex = "arxiv_to_bibtex.__main__:main"
